@@ -1752,22 +1752,31 @@ NTSTATUS PhSetProcessAffinityMask(
  * \param ProcessHandle A handle to a process. The handle 
  * must have PROCESS_SET_INFORMATION access.
  * \param IoPriority The new I/O priority.
- *
- * \remarks This function requires a valid KProcessHacker 
- * handle.
  */
 NTSTATUS PhSetProcessIoPriority(
     __in HANDLE ProcessHandle,
     __in ULONG IoPriority
     )
 {
-    return KphSetInformationProcess(
-        PhKphHandle,
-        ProcessHandle,
-        ProcessIoPriority,
-        &IoPriority,
-        sizeof(ULONG)
-        );
+    if (PhKphHandle)
+    {
+        return KphSetInformationProcess(
+            PhKphHandle,
+            ProcessHandle,
+            ProcessIoPriority,
+            &IoPriority,
+            sizeof(ULONG)
+            );
+    }
+    else
+    {
+        return NtSetInformationProcess(
+            ProcessHandle,
+            ProcessIoPriority,
+            &IoPriority,
+            sizeof(ULONG)
+            );
+    }
 }
 
 /**
@@ -2289,22 +2298,31 @@ NTSTATUS PhGetThreadCycleTime(
  * \param ThreadHandle A handle to a thread. The handle 
  * must have THREAD_SET_LIMITED_INFORMATION access.
  * \param IoPriority The new I/O priority.
- *
- * \remarks This function requires a valid KProcessHacker 
- * handle.
  */
 NTSTATUS PhSetThreadIoPriority(
     __in HANDLE ThreadHandle,
     __in ULONG IoPriority
     )
 {
-    return KphSetInformationThread(
-        PhKphHandle,
-        ThreadHandle,
-        ThreadIoPriority,
-        &IoPriority,
-        sizeof(ULONG)
-        );
+    if (PhKphHandle)
+    {
+        return KphSetInformationThread(
+            PhKphHandle,
+            ThreadHandle,
+            ThreadIoPriority,
+            &IoPriority,
+            sizeof(ULONG)
+            );
+    }
+    else
+    {
+        return NtSetInformationThread(
+            ThreadHandle,
+            ThreadIoPriority,
+            &IoPriority,
+            sizeof(ULONG)
+            );
+    }
 }
 
 /**
